Bug 1670515 - Don't assume memory position of planes. r=mattwoodrow

The Cb plane doesn't have to be located after the Cr plane in memory, there are referred via pointers, all it matters is that they don't overlap.

Note that none of those extra tests serve much purpose, none of your code can generated a 3 planes YUV image where the skip value wouldn't be 0.

However, not knowing how that code is called and if it's still in use today, taking the safer approach of just fixing the existing test.

Differential Revision: https://phabricator.services.mozilla.com/D93178