dom/canvas/ImageUtils.cpp
@@ -5,10 +5,12 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 #include "ImageUtils.h"
+
 #include "ImageContainer.h"
+#include "Intervals.h"
 #include "mozilla/AlreadyAddRefed.h"
-#include "mozilla/dom/ImageBitmapBinding.h"
 #include "mozilla/ErrorResult.h"
+#include "mozilla/dom/ImageBitmapBinding.h"
 
 using namespace mozilla::layers;
 using namespace mozilla::gfx;
@@ -51,13 +53,19 @@ static ImageBitmapFormat GetImageBitmapFormatFromPlanarYCbCrData(
     layers::PlanarYCbCrData const* aData) {
   MOZ_ASSERT(aData);
 
+  media::Interval<uintptr_t> YInterval(
+      uintptr_t(aData->mYChannel),
+      uintptr_t(aData->mYChannel) + aData->mYSize.height * aData->mYStride),
+      CbInterval(uintptr_t(aData->mCbChannel),
+                 uintptr_t(aData->mCbChannel) +
+                     aData->mCbCrSize.height * aData->mCbCrStride),
+      CrInterval(uintptr_t(aData->mCrChannel),
+                 uintptr_t(aData->mCrChannel) +
+                     aData->mCbCrSize.height * aData->mCbCrStride);
   if (aData->mYSkip == 0 && aData->mCbSkip == 0 &&
       aData->mCrSkip == 0) {  // Possibly three planes.
-    if (aData->mCbChannel >=
-            aData->mYChannel + aData->mYSize.height * aData->mYStride &&
-        aData->mCrChannel >=
-            aData->mCbChannel + aData->mCbCrSize.height *
-                                    aData->mCbCrStride) {  // Three planes.
+    if (!YInterval.Intersects(CbInterval) &&
+        !CbInterval.Intersects(CrInterval)) {  // Three planes.
       if (aData->mYSize.height == aData->mCbCrSize.height) {
         if (aData->mYSize.width == aData->mCbCrSize.width) {
           return ImageBitmapFormat::YUV444P;
@@ -73,15 +81,13 @@ static ImageBitmapFormat GetImageBitmapFormatFromPlanarYCbCrData(
     }
   } else if (aData->mYSkip == 0 && aData->mCbSkip == 1 &&
              aData->mCrSkip == 1) {  // Possibly two planes.
-    if (aData->mCbChannel >=
-            aData->mYChannel + aData->mYSize.height * aData->mYStride &&
+    if (!YInterval.Intersects(CbInterval) &&
         aData->mCbChannel == aData->mCrChannel - 1) {  // Two planes.
       if (((aData->mYSize.height + 1) / 2) == aData->mCbCrSize.height &&
           ((aData->mYSize.width + 1) / 2) == aData->mCbCrSize.width) {
         return ImageBitmapFormat::YUV420SP_NV12;  // Y-Cb-Cr
       }
-    } else if (aData->mCrChannel >=
-                   aData->mYChannel + aData->mYSize.height * aData->mYStride &&
+    } else if (!YInterval.Intersects(CrInterval) &&
                aData->mCrChannel == aData->mCbChannel - 1) {  // Two planes.
       if (((aData->mYSize.height + 1) / 2) == aData->mCbCrSize.height &&
           ((aData->mYSize.width + 1) / 2) == aData->mCbCrSize.width) {
